--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <div class="bodey">
         <div class=square_grp>
-            <button class="square1"></button>
-            <button class="square2"></button>
-            <button class="square3"></button>
-            <button class="square4"></button>
-            <button class="square5"></button>
-            <button class="square6"></button>
+            <div class="square1"></div>
+            <div class="square2"></div>
+            <div class="square3"></div>
+            <div class="square4"></div>
+            <div class="square5"></div>
+            <div class="square6"></div>
         </div>
     </div>
 
