--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="msg"></p>
             <div class="difficulty">
                 <button id="easy">EASY</button>
-                <button id="hard">HARD</button>
+                <button id="hard" class="select">HARD</button>
             </div>
         </nav>
     </div>
